--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+//https://github.com/g6ling/react-native-html-parser
 {
   "name": "czNews",
   "version": "0.0.1",
@@ -9,6 +10,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.4",
+    "react-native-html-parser": "0.0.5",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2"
