--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-//https://github.com/g6ling/react-native-html-parser
 {
   "name": "czNews",
   "version": "0.0.1",
@@ -9,10 +8,13 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.12",
+    "react-mixin": "^3.1.0",
     "react-native": "0.46.4",
     "react-native-html-parser": "0.0.5",
+    "react-native-tab-view": "0.0.69",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
+    "react-timer-mixin": "^0.13.3",
     "redux": "^3.7.2"
   },
   "devDependencies": {
